--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
         </div>
     </div>
     <!-- Extern JavaScript-fil -->
-    <script src="renderer.js"></script>
+    <script type="module" src="renderer.js"></script>
 </body>
 </html>
